test/e2e/chainsaw/hybridgateway/httproute-complex-multiple-rules/02-assert-httproute-complex.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ($httproute_name)
  namespace: ($kong_namespace)
status:
  parents:
    - parentRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: ($gateway_name)
        namespace: ($kong_namespace)
      controllerName: konghq.com/gateway-operator
      conditions:
        - type: Accepted
          status: "True"
          reason: Accepted
        - type: ResolvedRefs
          status: "True"
          reason: ResolvedRefs
